# tutorial_2021

./: README.md
examples_and_samples/hard_samples/: Digital_realise
tasks/project/: Control.md  Embedded.md  README.md
tasks/project/descriptions/: Control.md  Embedded.md  Image_processing.md  Programming_仅限大一.md
tasks/project/plane/: 1_Default_sldprt.STEP  3_Default_sldprt.STEP  56465_Default_sldprt.STEP  569+12_Default_sldprt.STEP  59_Default_sldprt.STEP  84_Default_sldprt.STEP  Part5_Default_sldprt.STEP  battery_Default_sldprt.STEP  fghj_Default_sldprt.STEP  hex nut style 2_am_B18.2.4.2M - Hex nut- Style 2-  M3 x 0.5 --D-N_sldprt.STEP  hex nut style 2_am_B18.2.4.2M - Hex nut- Style 2-  M4 x 0.7 --D-N_sldprt.STEP  pan cross head_am_B18.6.7M - M2 x 0.4 x 2.5 Type I Cross Recessed PHMS --2.5N_sldprt.STEP  pan cross head_am_B18.6.7M - M3 x 0.5 x 13 Type I Cross Recessed PHMS --13N_sldprt.STEP  pan cross head_am_B18.6.7M - M3 x 0.5 x 30 Type I Cross Recessed PHMS --30N_sldprt.STEP  quad core_error.txt  quadCore_DataFile.m  quadCore_cs.slx  quadCore_cs.slx.original  quadCore_cs.slxc  spider arms_Default_sldprt.STEP  transform.m  (+2 more)
tasks/week1/: README.md  code1.cpp  code2.cpp  hello.cpp  longestPalindrome.cpp  programming_exercise.md
tasks/week2/: README.md  background_recovery.md  code_list.cpp  longestCommon.cpp  programming_exercise.md
tasks/week2/Digital_realize/: CMakeLists.txt  readme.md
tasks/week2/Digital_realize/inc/: NumRec.h
tasks/week2/Digital_realize/src/: NumRec.cpp
tasks/week2/Digital_realize/test/: demo.cpp
tasks/week3/: README.md
(+110 files in other folders)
